--- a/login_admin.html
+++ b/login_admin.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="Content-type" name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width">
 	<link rel="stylesheet" href="jquery.mobile/jquery.mobile-1.4.0.min.css" />
-	<script src="jquery.mobile/jquery-1.7.2.min"></script>
+	<script src="jquery.mobile/jquery-1.7.2.js"></script>
 	<script src="jquery.mobile/jquery.mobile-1.4.0.min.js"></script>
 	<script src="js/login.js"></script>
  </head>
